--- a/index.html
+++ b/index.html
@@ -472,5 +472,18 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="close-modal-btn">
+          <svg width="8" height="8" class="icon-close-btn">
+            <use href="./images/icons.svg#icon-close-button"></use>
+          </svg>
+        </button>
+        <p class="title-modal-text">
+          Leave your contacts and we will call you back
+        </p>
+      </div>
+    </div>
   </body>
 </html>
