--- a/index.html
+++ b/index.html
@@ -483,6 +483,35 @@
         <p class="title-modal-text">
           Leave your contacts and we will call you back
         </p>
+        <form action="">
+          <div class="form-wrapper-container">
+            <labele class="modal-form-lable" name="user-name">Name</labele>
+            <div class="input-wrapper-container">
+              <input class="modal-input" type="text" id="user-name" required />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-person-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper-container">
+            <labele class="modal-form-lable" name="user-tel">Name</labele>
+            <div class="input-wrapper-container">
+              <input class="modal-input" type="text" id="user-tel" required />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-person-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper-container">
+            <labele class="modal-form-lable" name="user-email">Name</labele>
+            <div class="input-wrapper-container">
+              <input class="modal-input" type="text" id="user-email" required />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-person-email"></use>
+              </svg>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </body>
