--- a/index.html
+++ b/index.html
@@ -494,23 +494,53 @@
             </div>
           </div>
           <div class="form-wrapper-container">
-            <labele class="modal-form-lable" name="user-tel">Name</labele>
+            <labele class="modal-form-lable" name="user-tel">Phone</labele>
             <div class="input-wrapper-container">
-              <input class="modal-input" type="text" id="user-tel" required />
+              <input class="modal-input" type="tel" id="user-tel" required />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-person-phone"></use>
               </svg>
             </div>
           </div>
           <div class="form-wrapper-container">
-            <labele class="modal-form-lable" name="user-email">Name</labele>
+            <labele class="modal-form-lable" name="user-email">Email</labele>
             <div class="input-wrapper-container">
-              <input class="modal-input" type="text" id="user-email" required />
+              <input
+                class="modal-input"
+                type="email"
+                id="user-email"
+                required
+              />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-person-email"></use>
               </svg>
             </div>
           </div>
+          <div class="form-container-comment">
+            <label class="modal-form-lable-comment" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="modal-form-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-container-checkbox">
+            <input
+              type="checkbox"
+              class="modal-input-checkbox visually-hidden"
+              id="user-checkbox"
+            />
+            <label for="user-checkbox" class="modal-label-checkbox">
+              <span class="custom-checkbox">
+                <svg width="10" height="8" class="custom-checkbox-icon">
+                  <use href="./images/icons.svg#icon-check"></use></svg></span
+              >I accept the terms and conditions of the
+              <a class="checkbox-link" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="buttons modal-send-button">Send</button>
         </form>
       </div>
     </div>
