--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
           <h1 class="hero-title hero-margin">
             Effective Solutions for Your Business
           </h1>
-          <button type="button" class="buttons style-but">Order Service</button>
+          <button type="button" class="buttons style-but" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- section two -->
@@ -473,9 +475,9 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop" data-modal>
       <div class="modal">
-        <button class="close-modal-btn">
+        <button class="close-modal-btn" data-modal-close>
           <svg width="8" height="8" class="icon-close-btn">
             <use href="./images/icons.svg#icon-close-button"></use>
           </svg>
@@ -485,30 +487,43 @@
         </p>
         <form action="">
           <div class="form-wrapper-container">
-            <labele class="modal-form-lable" name="user-name">Name</labele>
+            <labele class="modal-form-lable" for="user-name">Name</labele>
             <div class="input-wrapper-container">
-              <input class="modal-input" type="text" id="user-name" required />
+              <input
+                class="modal-input"
+                name="user-name"
+                type="text"
+                id="user-name"
+                required
+              />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-person-name"></use>
               </svg>
             </div>
           </div>
           <div class="form-wrapper-container">
-            <labele class="modal-form-lable" name="user-tel">Phone</labele>
+            <labele class="modal-form-lable" for="user-tel">Phone</labele>
             <div class="input-wrapper-container">
-              <input class="modal-input" type="tel" id="user-tel" required />
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+                required
+              />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-person-phone"></use>
               </svg>
             </div>
           </div>
           <div class="form-wrapper-container">
-            <labele class="modal-form-lable" name="user-email">Email</labele>
+            <labele class="modal-form-lable" for="user-email">Email</labele>
             <div class="input-wrapper-container">
               <input
                 class="modal-input"
                 type="email"
                 id="user-email"
+                name="user-email"
                 required
               />
               <svg width="18" height="24" class="modal-icon">
@@ -544,5 +559,7 @@
         </form>
       </div>
     </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
